# TestOpenGL

./: .gitignore  CMakeLists.txt  README.md  TestOpenGL.sln  make_VS2019.bat
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_atomic-1.75.0/: boost_atomic-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_chrono-1.75.0/: boost_chrono-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_container-1.75.0/: boost_container-config.cmake  libboost_container-variant-vc142-mt-gd-x32-1_75-shared.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_context-1.75.0/: boost_context-config.cmake  libboost_context-variant-vc142-mt-gd-x32-1_75-shared.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_contract-1.75.0/: boost_contract-config.cmake  libboost_contract-variant-vc142-mt-gd-x32-1_75-shared.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_coroutine-1.75.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-vc142-mt-gd-x32-1_75-shared.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_date_time-1.75.0/: boost_date_time-config.cmake  libboost_date_time-variant-vc142-mt-gd-x32-1_75-shared.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_exception-1.75.0/: boost_exception-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_fiber-1.75.0/: boost_fiber-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_fiber_numa-1.75.0/: boost_fiber_numa-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_filesystem-1.75.0/: boost_filesystem-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_graph-1.75.0/: boost_graph-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_graph_parallel-1.75.0/: boost_graph_parallel-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_headers-1.75.0/: boost_headers-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_iostreams-1.75.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-vc142-mt-s-x64-1_75-static.cmake  libboost_iostreams-variant-vc142-mt-sgd-x64-1_75-static.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_json-1.75.0/: boost_json-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_locale-1.75.0/: boost_locale-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_log-1.75.0/: boost_log-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_log_setup-1.75.0/: boost_log_setup-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_math_c99-1.75.0/: boost_math_c99-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_math_c99f-1.75.0/: boost_math_c99f-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_math_c99l-1.75.0/: boost_math_c99l-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_math_tr1-1.75.0/: boost_math_tr1-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_math_tr1f-1.75.0/: boost_math_tr1f-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_math_tr1l-1.75.0/: boost_math_tr1l-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_mpi-1.75.0/: boost_mpi-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_nowide-1.75.0/: boost_nowide-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_prg_exec_monitor-1.75.0/: boost_prg_exec_monitor-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_program_options-1.75.0/: boost_program_options-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_random-1.75.0/: boost_random-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_regex-1.75.0/: boost_regex-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_serialization-1.75.0/: boost_serialization-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_stacktrace_addr2line-1.75.0/: boost_stacktrace_addr2line-config.cmake
ExternalLibraries/boost_1_75_0/stage/lib/cmake/boost_stacktrace_backtrace-1.75.0/: boost_stacktrace_backtrace-config.cmake
base/objects/: cube_test.xml
base/shaders/: standart.fs  standart.vs  textures.vs  texturesMatrix.vs  texturesMatrix2.vs  textures_2.1_color.vs
src/: CMakeLists.txt  Main.cpp  ShaderProgram.h
src/Core/: Camera.h  RefCounter.h  Singleton.h
src/Math/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector3T.cpp  Vector3T.h
src/Render/: ShaderProgram.h  Texture.h
src/Resources/: Asset.cpp  Asset.h  ResourceLoader.cpp  ResourceLoader.h  SceneObjectAsset.cpp  SceneObjectAsset.h
src/Visual/: SceneObject.cpp  SceneObject.h  Transform.h
(+17 files in other folders)
